--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -190,6 +190,16 @@
    "source": [
     "import problem_unittests as tests\n",
     "\n",
+    "# Change this value to enable/disable debug prints\n",
+    "enable_prints = False\n",
+    "\n",
+    "def dbgprint(msg):\n",
+    "    if enable_prints:\n",
+    "        print(msg)\n",
+    "\n",
+    "def leaky_relu(alpha, tensor):\n",
+    "    return tf.maximum(alpha * tensor, tensor)\n",
+    "\n",
     "def model_inputs(image_width, image_height, image_channels, z_dim):\n",
     "    \"\"\"\n",
     "    Create the model inputs\n",
@@ -199,9 +209,10 @@
     "    :param z_dim: The dimension of Z\n",
     "    :return: Tuple of (tensor of real input images, tensor of z data, learning rate)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "\n",
-    "    return None, None, None\n",
+    "    z = tf.placeholder(tf.float32, (None, z_dim), name='input_z')\n",
+    "    learnrate = tf.placeholder(tf.float32, name='learn_rate')\n",
+    "    inputs = tf.placeholder(tf.float32, (None, image_width, image_height, image_channels), name='input_real')\n",
+    "    return inputs, z, learnrate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -231,6 +242,8 @@
    },
    "outputs": [],
    "source": [
+    "enable_prints = False\n",
+    "\n",
     "def discriminator(images, reuse=False):\n",
     "    \"\"\"\n",
     "    Create the discriminator network\n",
@@ -238,10 +251,36 @@
     "    :param reuse: Boolean if the weights should be reused\n",
     "    :return: Tuple of (tensor output of the discriminator, tensor logits of the discriminator)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    \n",
+    "    alpha = 0.1 # Use leaky ReLU with same alpha as Radford, Metz et. al\n",
+    "    drop_rate = 0.5 # Use dropout to avoid learning the data distribution\n",
+    "    \n",
+    "    with tf.variable_scope('discriminator', reuse=reuse):\n",
+    "        dbgprint('input shape: {}'.format(images.shape))\n",
+    "        #input layer is 28x28x3\n",
     "\n",
-    "    return None, None\n",
+    "        x1 = tf.layers.conv2d(images, 256, 5, strides=2, padding='same',\n",
+    "                             kernel_initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        relu1 = leaky_relu(alpha, x1)\n",
+    "        dropout1 = tf.layers.dropout(relu1, rate=drop_rate, name='dropout1')\n",
+    "        dbgprint('discriminator: lrelu1 shape: {}'.format(relu1.shape))\n",
     "\n",
+    "        x2 = tf.layers.conv2d(dropout1, 512, 5, strides=2, padding='same',\n",
+    "                             kernel_initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        relu2 = leaky_relu(alpha, x2)\n",
+    "        dropout2 = tf.layers.dropout(relu2, rate=drop_rate, name='dropout2')\n",
+    "        dbgprint('discriminator: lrelu2 shape: {}'.format(relu2.shape))\n",
+    "\n",
+    "        # flatten the tensor\n",
+    "        flat = tf.reshape(dropout2, (-1, 7*7*512))\n",
+    "        dbgprint('discriminator: flat shape: {}'.format(flat.shape))\n",
+    " \n",
+    "        # fully-connected with 1 output\n",
+    "        logits = tf.layers.dense(flat, 1)\n",
+    "        output = tf.sigmoid(logits)\n",
+    "        dbgprint('discriminator: output shape: {}'.format(output.shape))\n",
+    "        \n",
+    "        return output, logits\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -270,6 +309,8 @@
    },
    "outputs": [],
    "source": [
+    "enable_prints = False\n",
+    "\n",
     "def generator(z, out_channel_dim, is_train=True):\n",
     "    \"\"\"\n",
     "    Create the generator network\n",
@@ -278,9 +319,40 @@
     "    :param is_train: Boolean if generator is being used for training\n",
     "    :return: The tensor output of the generator\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    \n",
-    "    return None\n",
+    "\n",
+    "    reuse = not is_train # we re-use variables when not training\n",
+    "    alpha = 0.1\n",
+    "\n",
+    "    with tf.variable_scope('generator', reuse=reuse):\n",
+    "        '''\n",
+    "        As in the Radford, et.al paper, we use ReLUs as the activation function\n",
+    "        in every layer.\n",
+    "        '''\n",
+    "        x1 = tf.layers.dense(z, 7 * 7 * 64, \n",
+    "                             kernel_initializer=tf.contrib.layers.xavier_initializer())\n",
+    "\n",
+    "        x1 = tf.reshape(x1, (-1, 7, 7, 64))\n",
+    "        x1 = tf.layers.batch_normalization(x1, training=is_train)\n",
+    "        x1 = leaky_relu(alpha, x1)\n",
+    "        dbgprint('generator: x1 shape: {}'.format(x1.shape))\n",
+    "\n",
+    "        x2 = tf.layers.conv2d_transpose(x1, 32, 5, strides=2, padding='same', \n",
+    "                                        kernel_initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        x2 = tf.layers.batch_normalization(x2, training=is_train)\n",
+    "        x2 = leaky_relu(alpha, x2)\n",
+    "        dbgprint('generator: x2 shape: {}'.format(x2.shape))\n",
+    "\n",
+    "        x3 = tf.layers.conv2d_transpose(x2, 16, 5, strides=2, padding='same',\n",
+    "                                       kernel_initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        x3 = tf.layers.batch_normalization(x3, training=is_train)\n",
+    "        x3 = leaky_relu(alpha, x3)\n",
+    "        dbgprint('generator: x3 shape: {}'.format(x3.shape))\n",
+    "\n",
+    "        logits = tf.layers.conv2d_transpose(x3, out_channel_dim, 5, strides=1, padding='same')\n",
+    "\n",
+    "        dbgprint('generator: logits shape: {}'.format(logits.shape))\n",
+    "        out = tf.tanh(logits)\n",
+    "        return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -312,6 +384,8 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def model_loss(input_real, input_z, out_channel_dim):\n",
     "    \"\"\"\n",
     "    Get the loss for the discriminator and generator\n",
@@ -320,9 +394,23 @@
     "    :param out_channel_dim: The number of channels in the output image\n",
     "    :return: A tuple of (discriminator loss, generator loss)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    g_model = generator(input_z, out_channel_dim, is_train=True)\n",
+    "    d_model_real, d_logits_real = discriminator(input_real, reuse=False)\n",
+    "    d_model_fake, d_logits_fake = discriminator(g_model, reuse=True)\n",
     "    \n",
-    "    return None, None\n",
+    "    d_loss_real = tf.reduce_mean(\n",
+    "            tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "                    logits=d_logits_real, labels=tf.ones_like(d_model_real) * np.random.uniform(0.7, 1.0)))\n",
+    "    d_loss_fake = tf.reduce_mean(\n",
+    "            tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "                    logits=d_logits_fake, labels=tf.zeros_like(d_model_fake) * np.random.uniform(0.0, 0.3)))\n",
+    "    g_loss = tf.reduce_mean(\n",
+    "            tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "                    logits=d_logits_fake, labels=tf.ones_like(d_model_fake)))\n",
+    "    \n",
+    "    d_loss = d_loss_real + d_loss_fake\n",
+    "    \n",
+    "    return d_loss, g_loss\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -361,9 +449,15 @@
     "    :param beta1: The exponential decay rate for the 1st moment in the optimizer\n",
     "    :return: A tuple of (discriminator training operation, generator training operation)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    t_vars = tf.trainable_variables()\n",
+    "    d_vars = [v for v in t_vars if v.name.startswith('discriminator')]\n",
+    "    g_vars = [v for v in t_vars if v.name.startswith('generator')]\n",
     "    \n",
-    "    return None, None\n",
+    "    with tf.control_dependencies(tf.get_collection(tf.GraphKeys.UPDATE_OPS)):\n",
+    "        d_train_opt = tf.train.AdamOptimizer(learning_rate, beta1=beta1).minimize(d_loss, var_list=d_vars)\n",
+    "        g_train_opt = tf.train.AdamOptimizer(learning_rate, beta1=beta1).minimize(g_loss, var_list=g_vars)\n",
+    "        \n",
+    "    return d_train_opt, g_train_opt\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -441,7 +535,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -459,15 +553,44 @@
     "    :param data_shape: Shape of the data\n",
     "    :param data_image_mode: The image mode to use for images (\"RGB\" or \"L\")\n",
     "    \"\"\"\n",
-    "    # TODO: Build Model\n",
+    "    print('data_shape: {}'.format(data_shape))\n",
+    "    print('data_image_mode: {}'.format(data_image_mode))\n",
     "    \n",
+    "    inputs, z, learnrate = model_inputs(data_shape[1], data_shape[2], data_shape[3], z_dim)\n",
+    "    d_loss, g_loss = model_loss(inputs, z, data_shape[3])\n",
+    "    d_train_opt, g_train_opt = model_opt(d_loss, g_loss, learning_rate, beta1)\n",
+    "    \n",
+    "    print_every = 10\n",
+    "    show_every = 100\n",
+    "    step = 0\n",
+    "    samples, losses = [], []\n",
+    "    n_batches = data_shape[0] // (batch_size)\n",
     "    \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        for epoch_i in range(epoch_count):\n",
     "            for batch_images in get_batches(batch_size):\n",
-    "                # TODO: Train Model\n",
     "                \n",
+    "                # scale batch images from -0.5/0.5 to -1/1 to line up with tanh\n",
+    "                batch_images *= 2\n",
+    "                \n",
+    "                batch_z = np.random.uniform(-1, 1, (batch_size, z_dim)) # generate random noise for generator\n",
+    "                \n",
+    "                # optimize\n",
+    "                _ = sess.run(d_train_opt, feed_dict={inputs:batch_images, z:batch_z, learnrate:learning_rate})\n",
+    "                _ = sess.run(g_train_opt, feed_dict={z:batch_z, learnrate:learning_rate})\n",
+    "                \n",
+    "                if step % print_every == 0:\n",
+    "                    train_loss_d = d_loss.eval({z:batch_z, inputs:batch_images})\n",
+    "                    train_loss_g = g_loss.eval({z:batch_z})\n",
+    "                    print('Epoch {}/{} Batch {}'.format(epoch_i+1, epoch_count, step+1),\n",
+    "                          'Generator Loss: {:.4f} '.format(train_loss_g),\n",
+    "                          'Discriminator Loss: {:.4f}'.format(train_loss_d))\n",
+    "                \n",
+    "                if step % show_every == 0:\n",
+    "                    show_generator_output(sess, 25, z, data_shape[3], data_image_mode)\n",
+    "                \n",
+    "                step += 1               \n",
     "                "
    ]
   },
@@ -493,10 +616,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = None\n",
-    "z_dim = None\n",
-    "learning_rate = None\n",
-    "beta1 = None\n",
+    "batch_size = 16\n",
+    "z_dim = 100\n",
+    "learning_rate = .0001\n",
+    "beta1 = 0.5\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -532,10 +655,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = None\n",
-    "z_dim = None\n",
-    "learning_rate = None\n",
-    "beta1 = None\n",
+    "batch_size = 1\n",
+    "z_dim = 100\n",
+    "learning_rate = 0.0001\n",
+    "beta1 = 0.1\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -559,6 +682,17 @@
     "### Submitting This Project\n",
     "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_face_generation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -577,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
